--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ h3 {
         <h1>Ethan McGee</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a senior at Bob Jones University studying business admin with no minor. I work for Cuppa Jones as a barista in the Den.</p>
          <p>
-            I enjoy participating in community outreach events, and I am active in my local church: Southside Baptist Church of Gaffney, SC.  I teach Sunday School for the College &amp; Career group and I run the Sound / Video Projection System during services.  I also drive the church bus for weekend activities.
+            I enjoy participating in skateboarding, and I am active in my local church: Grace Baptist, SC.  I teach Sunday School for my Church &amp; I do photgraphy and videography.
          </p> 
          <p>
-            I also enjoy running / hiking as well as a good book
+            I also enjoy playing the piano / hiking as well as a reading the Bible
          </p>
         
         <h3>EDUCATION</h3>
